traffic/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: server
---
apiVersion: v1
kind: Service
metadata:
  name: server-v1
  labels:
    app: server
    version: v1
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: server
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v1
  labels:
    app: server
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v1
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      serviceAccountName: server
      containers:
      - name: server
        image: docker.io/linsun/server:simple
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
