traffic/serverv2.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-v2
  labels:
    app: server
    version: v1
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: server
    version: v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v2
  labels:
    app: server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: v2
  template:
    metadata:
      labels:
        app: server
        version: v2
    spec:
      serviceAccountName: server
      containers:
      - name: server
        image: docker.io/linsun/server:simplev2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
