traffic/route-v1-90-v2-10.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: server
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: server
    port: 3000
  rules:
  - backendRefs:
    - name: server-v1
      port: 3000
      weight: 90
    - name: server-v2
      port: 3000
      weight: 10
